<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">摇一摇</string>
    <string name="title_activity_other">OtherActivity</string>
    <string name="shake_switch_text">摇一摇唤醒</string>
    <string name="shakeDetector_service_started_notice">摇一摇唤醒开启啦，夯摇醒你大爷吧！骚年！</string>
    <string name="shakeDetector_service_stopped_notice">摇一摇唤醒关闭，再见了，骚年！</string>
    <string name="shake_detector_notification_title_template">骚年摇一摇: %1$s</string>
    <string name="shake_detector_notification_placeholder_text_template">你信不信: %1$s</string>
    <string name="about_menu_item_text">关于</string>
    <string name="issue_menu_item_text">报告问题</string>
    <string name="settings_menu_item_text">设置</string>
    <string name="open">打开</string>
    <string name="auto_startup_on_pref_sum">系统启动时自动开启摇一摇唤醒</string>
    <string name="auto_startup_off_pref_sum">系统启动时不开启摇一摇唤醒</string>
    <string name="auto_startup_key">YOYOUNLOCK_AUTO_STARTUP</string>
    <string name="auto_startup_name">自启动</string>
    <string name="pref_header_name_common_settings">通用设置</string>
    <string name="pref_header_name_debug_tools">调试工具</string>
    <string name="list_all_sensors">列出所有感应器</string>
    <string name="title_activity_shake_tester">ShakeTesterActivity</string>
    <string name="hello_world">Hello world!</string>
    <string name="shake_test">摇晃测试</string>
    <string name="test_axis_view_text">%1$s加速度= %2$s (m/s^2)\n瞬时最大值= %3$s\n瞬时最小值= %4$s</string>
    <string name="test_use_gravity_filter">过滤重力加速度</string>
    <string name="seek_bar_preference_summary">当前摇晃探测阈值：%1$s</string>
    <string name="seek_bar_preference_title">摇晃探测阈值</string>
    <string name="seek_bar_preference_key">wyq.android.yoyounlock.ShakeListener#MIN_ACCELERATION</string>
    <string name="seek_bar_preference_warning_txt">警告：除非您知道自己在修改什么，否则请勿随意改动该值！</string>
    <string name="use_custom_def_key">USE_wyq.android.yoyounlock.ShakeListener#MIN_ACCELERATION</string>
    <string name="use_custom_def_title">使用自定义摇晃探测阈值</string>
    <string name="use_custom_def_summary_off">请勿随意改动该值</string>
    <string name="use_custom_def_summary_on">使用自定义摇晃探测阈值</string>
    <string name="reset_default_settings">恢复默认设定</string>
    <string name="reset_default_settings_title">恢复默认设定</string>
    <string name="reset_default_settings_message">确认使用默认的摇晃阈值吗？</string>
    <string name="title_activity_reset_default_settings">ResetDefaultSettingsActivity</string>
    <string name="keep_wake_def_key">wyq.android.yoyounlock.ShakeListener#wakeLock</string>
    <string name="keep_wake_def_title">锁屏后强制激活</string>
    <string name="keep_wake_def_summary_off">如无法唤醒，请激活该选项</string>
    <string name="keep_wake_def_summary_on">强制激活将会消耗更多电池</string>

</resources>