<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android" >

    <PreferenceCategory android:title="@string/pref_header_name_common_settings" >
        <CheckBoxPreference
            android:defaultValue="true"
            android:key="@string/auto_startup_key"
            android:summaryOff="@string/auto_startup_off_pref_sum"
            android:summaryOn="@string/auto_startup_on_pref_sum"
            android:title="@string/auto_startup_name" />
        <CheckBoxPreference android:defaultValue="false" android:title="@string/use_custom_def_title" android:key="@string/use_custom_def_key" android:summaryOff="@string/use_custom_def_summary_off" android:summaryOn="@string/use_custom_def_summary_on"/>

        <wyq.android.yoyounlock.tool.SeekBarPreferences
            android:defaultValue="14"
            android:dependency="@string/use_custom_def_key"
            android:key="@string/seek_bar_preference_key"
            android:title="@string/seek_bar_preference_title" />
    </PreferenceCategory>
    <PreferenceCategory android:title="@string/pref_header_name_debug_tools" >
        <Preference android:title="@string/list_all_sensors" >
            <intent
                android:targetClass="wyq.android.yoyounlock.tool.ListSensors"
                android:targetPackage="wyq.android.yoyounlock" />
        </Preference>
        <Preference android:title="@string/shake_test" >
            <intent
                android:targetClass="wyq.android.yoyounlock.tool.ShakeTesterActivity"
                android:targetPackage="wyq.android.yoyounlock" />
        </Preference>
    </PreferenceCategory>

</PreferenceScreen>